crates/tmark-writers/tests/snapshots/fixtures__diag-table-span@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: (1fr, 1fr, 1fr, 1fr,),
  align: (left, left, left, left,),
  table.header([A], [B], [C], [D]),
  [r1], table.cell(colspan: 2, rowspan: 2)[Block], [3],
  [r2], [c],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
