crates/tmark-writers/tests/snapshots/fixtures__divider@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
First page.

\tsdivider

Second page.

\begin{displayquote}
Before the rule.

\tsrule

After the rule.
\end{displayquote}

---requires---
{
  "packages": [
    "csquotes",
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
