crates/tmark-writers/tests/snapshots/fixtures__divider@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
First page.

#ts-divider()

Second page.

#quote(block: true)[
Before the rule.

#ts-rule()

After the rule.
]

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
