crates/tmark-writers/tests/snapshots/fixtures__escape-typst-enum-number@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
- #ts-task("open")[0\.]
- #ts-task("done")[1\.]
- #ts-task("open")[3.5 kg]

The exam is at 10. o'clock.

10\. Not a list: a sentence that opens on a number.

---requires---
{
  "packages": [
    "amssymb",
    "enumitem",
    "pifont"
  ],
  "fragments": [
    "ts-todolist"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
