crates/tmark-writers/tests/snapshots/fixtures__fence-info-braces@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<pre><code class="language-c">int x;
</code></pre>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
