crates/tmark-writers/tests/snapshots/fixtures__fence-info-braces@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tscode}[lang=c, class={annotate}]
int x;
\end{tscode}

---requires---
{
  "packages": [
    "fvextra",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
